<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:id="@+id/relativeMicro_app"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.giordanogiammaria.microapp30.MicroAppActivity"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:id="@+id/relativeLayout">

        <info.hoang8f.widget.FButton
            android:id="@+id/prevButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            android:onClick="prevOnClick"
            android:text="@string/previous"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_turquoise"
            fbutton:shadowEnabled="true" />

        <info.hoang8f.widget.FButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left|top"
            android:layout_margin="10dp"
            android:onClick="nextOnClick"
            android:text="@string/next"
            android:layout_alignParentEnd="true"
            android:textColor="@android:color/white"
            fbutton:buttonColor="@color/fbutton_color_turquoise"
            fbutton:shadowEnabled="true" />
    </RelativeLayout>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/relativeLayout"
        android:layout_alignParentStart="true" />

</RelativeLayout>
