<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/sendEmailTextView"
        android:text="@string/sendEmail"
        android:textSize="25sp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imageViewContact"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="20sp"
        android:layout_marginLeft="20sp"
        android:src="@drawable/user"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"/>

    <TextView
        android:id="@+id/toTextView"
        android:text="@string/to"
        android:paddingLeft="5sp"
        android:layout_below="@id/imageViewContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_below="@id/imageViewContact"
        android:layout_marginTop="20sp"
        android:layout_height="wrap_content"
        android:id="@+id/firstFloat">
    <EditText
        android:id="@+id/subjectEditText"
        android:hint="@string/subject"
        android:paddingTop="20sp"
        android:paddingLeft="5sp"
        android:layout_below="@id/toTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_below="@id/firstFloat"
        android:layout_height="wrap_content">
    <EditText
        android:id="@+id/bodyEditText"
        android:hint="@string/body"
        android:paddingLeft="5sp"
        android:layout_below="@id/subjectEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>



    <Button
    android:id="@+id/sendButton"
    android:text="@string/send"
    android:layout_width="match_parent"
    android:layout_alignParentBottom="true"
    android:layout_height="wrap_content" />

</RelativeLayout>