<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fbutton="http://schemas.android.com/tools"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical">

    <TextView
        android:id="@+id/sendingSmsTo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/sendingSms"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/picture"
        android:layout_width="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_height="250sp"
        android:layout_below="@+id/sendingSmsTo"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image"
        android:src="@drawable/ic_contact_picture"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        />

    <TextView
        android:id="@+id/tx_label_cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/picture"
        android:layout_centerHorizontal="true"
        android:text="@string/content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="wrap_content"
        android:layout_below="@id/tx_label_cont"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/tx_container"
            android:layout_width="match_parent"
            android:layout_height="150sp"
            android:paddingLeft="5sp"
            android:layout_alignParentStart="true"
            android:background="@drawable/border_text_view"
            android:inputType="textMultiLine"
            android:hint="@string/enter_text"
            android:lines="5"
            android:state_enabled="false"
            android:tag="disabled" />
    </RelativeLayout>
    <info.hoang8f.widget.FButton
        android:id="@+id/sendSms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:textColor="@android:color/white"
        android:text="@string/send"
        fbutton:buttonColor="@color/fbutton_color_turquoise"
        android:layout_below="@id/relativeLayout2"

        />
</RelativeLayout>