<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical" 
    android:id="@+id/linearLayoutRoot">

    <LinearLayout
        android:id="@+id/linearLayout0"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|center" >

        <TextView
            android:id="@+id/benv"
            android:layout_width="0dip"
            android:layout_height="30dp"
            android:layout_weight="0.02"
            android:clickable="false"
            android:gravity="center"
            android:paddingTop="5dp"
            android:text="@string/welcome_app_name"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/benvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.02"
        android:clickable="false"
        android:gravity="center"
        android:text="benvenuto"
        android:textAppearance="?android:attr/textAppearanceSmall"
        />
            
    <ImageView
        android:id="@+id/logoapp"
        android:layout_width="wrap_content"
        android:layout_height="160dp"
        android:contentDescription="@string/image"
        android:src="@drawable/logo_micro_app" />

    <TextView
        android:id="@+id/namefile"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:gravity="center"
        android:textColor="#234567"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/descfile"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.16"
        android:lines="5"
        android:textIsSelectable="false" />

    <LinearLayout
        android:id="@+id/linearLayout1"
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom|center|clip_vertical" >

        <Button
            android:id="@+id/sfoglia"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="105dp"
            android:layout_height="60dp"
            android:layout_weight="0.45"
            android:onClick="browseOnClick"
            android:drawableLeft="@android:drawable/ic_menu_search"
            android:state_enabled="true"
            android:background="@drawable/border_text_view"
            android:text="@string/run_from_XML" />
    </LinearLayout>

</LinearLayout>